--- a/GoIT/markup/home/lesson1/task1.html
+++ b/GoIT/markup/home/lesson1/task1.html
@@ -1,1 +1,16 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Анкета</title>
+  </head>
+  <body>
+    <h1>Расскажите о себе</h1>
+    <p><del>Меня зовут</del> <u>Я</u> - <ins>Пахарина</ins> <strong>Леся</strong> <em>Анатольевна</em>.</p>
+    <h2>Возраст</h2>
+    <p align="right">27 лет</p>
+    <h3>Город</h3>
+    <p align="center">Киев</p>
+    <h4>Сфера деятельность</h4>
+    <p align="justify">Реклама, маркетинг, IT</p>
+  </body>
+</html>
