--- a/GoIT/markup/home/lesson1/task1.html
+++ b/GoIT/markup/home/lesson1/task1.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <h1>Расскажите о себе</h1>
-    <p><del>Меня зовут</del> <u>Я</u> - <ins>Пахарина</ins> <strong>Леся</strong> <em>Анатольевна</em>.</p>
+    <p><s>Меня зовут</s> <u>Я</u> - <ins>Пахарина</ins> <strong>Леся</strong> <em>Анатольевна</em>.</p>
     <h2>Возраст</h2>
     <p align="right">27 лет</p>
     <h3>Город</h3>
