--- a/GoIT/markup/home/lesson1/task4.html
+++ b/GoIT/markup/home/lesson1/task4.html
@@ -6,9 +6,9 @@
   <body>
     <h1>Ссылки на домашние задания</h1>
       <ol>
-        <li><a href="https://github.com/lesyapakharyna/lesyapakharyna.github.io/blob/master/GoIT/markup/home/lesson1/task1.html">GitHub. Task 1</a></li>
-        <li><a href="https://github.com/lesyapakharyna/lesyapakharyna.github.io/blob/master/GoIT/markup/home/lesson1/task2.html">GitHub. Task 2</a></li>
-        <li><a href="https://github.com/lesyapakharyna/lesyapakharyna.github.io/blob/master/GoIT/markup/home/lesson1/task3.html">GitHub. Task 3</a></li>
+        <li><a href="task1.html">GitHub. Task 1</a></li>
+        <li><a href="task2.html">GitHub. Task 2</a></li>
+        <li><a href="task3.html">GitHub. Task 3</a></li>
       </ol>
     <h1>GoIT - the best of the best</h1>  
     <a href="http://goit.com.ua/" tafget="_self">GoIT</a>
