--- a/GoIT/markup/home/lesson1/task3.html
+++ b/GoIT/markup/home/lesson1/task3.html
@@ -4,9 +4,9 @@
     <title>Химия и математика</title>
   </head>
   <body>
-    <h1 align="center"><font color="#DC143C">Химическое уравнение</font></h1>
+    <h1 align="center">Химическое уравнение</h1>
     <p>SO<sub>2</sub> + NaOH = Na<sub>2</sub>SO<sub>3</sub> + H<sub>2</sub>O</p>
-    <h2 align="center"><font color="#DC143C">Математическая формула</font></h2>
+    <h2 align="center">Математическая формула</h2>
     <p color="grey">5x<sup>3</sup> - 5x (x<sup>3</sup> + 4) = 17</p>
   </body>
 </html>
